# Interface_2022-07

./: README.md
CaseClosed/: CMakeLists.txt  CaseClosed.cpp  CaseClosed.sln  CaseClosed.vcxproj  CaseClosed.vcxproj.filters
OpenCL/: OpenCL.sln
OpenCL/DeviceInformation/: DeviceInformation.cpp  DeviceInformation.vcxproj  DeviceInformation.vcxproj.filters
OpenCL/Kernel/: Kernel.cpp  Kernel.vcxproj  Kernel.vcxproj.filters
OpenCL/OpenGL/: OpenCL.cpp  OpenCL.h  OpenGL.cpp  OpenGL.vcxproj  OpenGL.vcxproj.filters
